--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^5.5.2",
     "react-native-pinchable": "^0.2.1",
     "react-native-safe-area-context": "^4.5.0",
@@ -29,7 +32,8 @@
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
