--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^5.5.2",
     "react-native-pinchable": "^0.2.1",
     "react-native-safe-area-context": "^4.5.0",
