--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^5.5.2",
