--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/react-native": "^12.0.1",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "18.2.0",
